--- a/index.html
+++ b/index.html
@@ -5,15 +5,469 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Title</title>
   </head>
-  <body style="background: #efefef; box-sizing: border-box">
+  <body style="background: #efefef; box-sizing: border-box; margin: 0">
     <h1 style="line-height: 0; font-size: 0">Table markup</h1>
+
+    <!-- MOBILE VEDSION  -->
     <table
       style="
-        width: 600px;
+        max-width: 320px;
+        width: 100%;
+        background-image: url(./images/bg-table.jpg);
+        background-position: top;
+        background-repeat: no-repeat;
+        background-size: cover;
+      "
+      cellpadding="0"
+      cellspacing="0"
+      align="center"
+    >
+      <caption style="line-height: 0; font-size: 0">
+        Layout of email mailings
+      </caption>
+      <thead>
+        <tr>
+          <th style="line-height: 0; font-size: 0">Messages</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td
+            style="
+              padding: 20px;
+              width: 320px;
+              background-image: url(./images/eader-bg-mob.png);
+              background-position: center;
+              background-repeat: no-repeat;
+              background-size: auto;
+            "
+          >
+            <a
+              href="#"
+              style="
+                display: block;
+                font-family: Arial, sans-serif;
+                font-size: 1em;
+                font-weight: 700;
+                line-height: 20px;
+                text-transform: uppercase;
+                text-align: center;
+                text-decoration: none;
+                color: #000000;
+              "
+              >Logo here</a
+            >
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <table
+              cellpadding="0"
+              cellspacing="0"
+              align="center"
+              style="padding-bottom: 20px"
+            >
+              <tr>
+                <td
+                  align="center"
+                  style="
+                    padding: 20px;
+                    width: 240px;
+                    border-radius: 17px;
+                    background-image: linear-gradient(
+                      74deg,
+                      #00c6fb 0%,
+                      #005bea 99.33%
+                    );
+                  "
+                >
+                  <div>
+                    <div
+                      style="
+                        padding-bottom: 12px;
+                        font-family: Arial;
+                        font-size: 13px;
+                        font-weight: 700;
+                        line-height: 20px;
+                        color: #ffffff;
+                      "
+                    >
+                      Sveta111, win! lottery gifts
+                    </div>
+                    <span
+                      style="
+                        padding-bottom: 12px;
+                        display: block;
+                        font-family: Arial;
+                        font-size: 11px;
+                        font-weight: 400;
+                        line-height: calc(20 / 16);
+                        color: #ffffff;
+                      "
+                    >
+                      We have a whole "Universe of Prizes" and we are ready to
+                      share great gifts with you! All you have to do to get them
+                      is win an exciting lottery that runs every day.
+                    </span>
+                    <button
+                      type="button"
+                      style="
+                        padding: 8px 30px;
+                        min-width: 120px;
+                        font-family: Arial;
+                        font-size: 13px;
+                        font-weight: 700;
+                        line-height: calc(24 / 16);
+                        border-radius: 100px;
+                        border: none;
+                        background: linear-gradient(
+                          90deg,
+                          green 0%,
+                          rgb(214, 226, 214) 100%
+                        );
+                        color: #ffffff;
+                      "
+                    >
+                      Play
+                    </button>
+                  </div>
+                  <img
+                    src="./images/img-first-desk.png"
+                    alt="monitor of imac"
+                    width="100"
+                    height="100"
+                    style="display: block; max-width: 100%; height: auto"
+                  />
+                </td>
+              </tr>
+            </table>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <table
+              cellpadding="0"
+              cellspacing="0"
+              align="center"
+              style="padding-bottom: 20px"
+            >
+              <tr>
+                <td
+                  align="center"
+                  style="
+                    padding: 20px;
+                    width: 240px;
+                    border-radius: 17px;
+                    background-image: linear-gradient(
+                      74deg,
+                      #00c6fb 0%,
+                      #005bea 99.33%
+                    );
+                  "
+                >
+                  <div>
+                    <div
+                      style="
+                        padding-bottom: 12px;
+                        font-family: Arial;
+                        font-size: 12px;
+                        font-weight: 700;
+                        line-height: 20px;
+                        color: #ffffff;
+                      "
+                    >
+                      Become a champion in tournaments
+                    </div>
+                    <span
+                      style="
+                        padding-bottom: 12px;
+                        display: block;
+                        font-family: Arial;
+                        font-size: 11px;
+                        font-weight: 400;
+                        line-height: calc(20 / 16);
+                        color: #ffffff;
+                      "
+                    >
+                      We have a whole "Universe of Prizes" and we are ready to
+                      share great gifts with you! All you have to do to get them
+                      is win an exciting lottery that runs every day.
+                    </span>
+                    <button
+                      type="button"
+                      style="
+                        padding: 8px 30px;
+                        min-width: 120px;
+                        font-family: Arial;
+                        font-size: 13px;
+                        font-weight: 700;
+                        line-height: calc(24 / 16);
+                        border-radius: 100px;
+                        border: none;
+                        background: linear-gradient(
+                          90deg,
+                          green 0%,
+                          rgb(214, 226, 214) 100%
+                        );
+                        color: #ffffff;
+                      "
+                    >
+                      Play
+                    </button>
+                  </div>
+                  <img
+                    src="./images/img-second-desk.png"
+                    alt="tablet"
+                    width="100"
+                    height="100"
+                    style="display: block; max-width: 100%; height: auto"
+                  />
+                </td>
+              </tr>
+            </table>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <table
+              cellpadding="0"
+              cellspacing="0"
+              align="center"
+              style="padding-bottom: 32px"
+            >
+              <tr>
+                <td
+                  align="center"
+                  style="
+                    padding: 20px;
+                    width: 240px;
+                    border-radius: 17px;
+                    background-image: linear-gradient(
+                      74deg,
+                      #00c6fb 0%,
+                      #005bea 99.33%
+                    );
+                  "
+                >
+                  <div>
+                    <div
+                      style="
+                        padding-bottom: 12px;
+                        font-family: Arial;
+                        font-size: 12px;
+                        font-weight: 700;
+                        line-height: 20px;
+                        color: #ffffff;
+                      "
+                    >
+                      Claim your Bonuses
+                    </div>
+                    <span
+                      style="
+                        padding-bottom: 12px;
+                        display: block;
+                        font-family: Arial;
+                        font-size: 11px;
+                        font-weight: 400;
+                        line-height: calc(20 / 16);
+                        color: #ffffff;
+                      "
+                    >
+                      Generous gifts are waiting for you in the form of no
+                      deposit bonuses and free spins in hot slots.
+                    </span>
+                    <button
+                      type="button"
+                      style="
+                        padding: 8px 30px;
+                        min-width: 120px;
+                        font-family: Arial;
+                        font-size: 1em;
+                        font-weight: 700;
+                        line-height: calc(24 / 16);
+                        border-radius: 100px;
+                        border: none;
+                        background: linear-gradient(
+                          90deg,
+                          green 0%,
+                          rgb(214, 226, 214) 100%
+                        );
+                        color: #ffffff;
+                      "
+                    >
+                      Take
+                    </button>
+                  </div>
+                  <img
+                    src="./images/img-third-desk.png"
+                    alt="treasure"
+                    width="100"
+                    height="100"
+                    style="
+                      display: block;
+                      max-width: 100%;
+                      height: auto;
+                      padding-top: 20px;
+                    "
+                  />
+                </td>
+              </tr>
+            </table>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <table cellpadding="0" cellspacing="0" style="text-align: center">
+              <tr>
+                <td style="padding-right: 20px; padding-left: 20px">
+                  <span
+                    style="
+                      padding-bottom: 10px;
+                      display: block;
+                      font-family: Arial;
+                      font-size: 14px;
+                      font-weight: 400;
+                      line-height: calc(16 / 14);
+                      color: #ffffff;
+                    "
+                    >If you have questions, please contact us:</span
+                  >
+                  <div>
+                    <a
+                      href="mailto:support@support.email"
+                      style="
+                        padding-bottom: 10px;
+                        display: block;
+                        font-family: Arial;
+                        font-size: 14px;
+                        font-weight: 400;
+                        line-height: calc(20 / 14);
+                        color: #ffffff;
+                        text-decoration: none;
+                      "
+                    >
+                      <img
+                        src="./images/icon-envelope.png"
+                        alt="link to email"
+                        width="18"
+                        height="18"
+                        style="
+                          padding-right: 14px;
+                          width: 18px;
+                          height: 18px;
+                          vertical-align: middle;
+                        "
+                      />
+                      support@support.email
+                    </a>
+                    <a
+                      href="tel:1234566789"
+                      style="
+                        padding-bottom: 10px;
+                        display: block;
+                        font-family: Arial;
+                        font-size: 14px;
+                        font-style: normal;
+                        font-weight: 400;
+                        line-height: calc(20 / 14);
+                        color: #ffffff;
+                        text-decoration: none;
+                      "
+                    >
+                      <img
+                        src="./images/icon-phone.png"
+                        alt="link to call"
+                        width="18"
+                        height="18"
+                        style="
+                          padding-right: 14px;
+                          width: 18px;
+                          height: 18px;
+                          vertical-align: middle;
+                        "
+                      />
+                      1234566789
+                    </a>
+                  </div>
+                  <span
+                    style="
+                      height: 1px;
+                      display: block;
+                      opacity: 0.3;
+                      background-color: #0c0f51;
+                    "
+                  ></span>
+                  <span
+                    style="
+                      padding-top: 16px;
+                      padding-bottom: 16px;
+                      display: block;
+                      font-family: Arial;
+                      font-size: 14px;
+                      font-weight: 400;
+                      line-height: calc(16 / 14);
+                      color: #ffffff;
+                    "
+                    >Some games and bonuses may not be available in your
+                    country.</span
+                  >
+                  <div
+                    style="
+                      padding-bottom: 20px;
+                      font-family: Arial;
+                      font-size: 14px;
+                      font-weight: 400;
+                      line-height: calc(16 / 14);
+                      color: #ffffff;
+                    "
+                  >
+                    You take all the credit for the fact that you have
+                    registered on our site.
+                    <div
+                      style="
+                        font-family: Arial;
+                        font-size: 14px;
+                        font-weight: 400;
+                        line-height: calc(16 / 14);
+                        color: #ffffff;
+                      "
+                    >
+                      For a return link with us, please send a copy to the whole
+                      sheet.
+                    </div>
+                    You can
+                    <a
+                      href="#"
+                      style="
+                        font-family: Arial;
+                        font-size: 14px;
+                        font-style: normal;
+                        font-weight: 400;
+                        line-height: calc(16 / 14);
+                        color: #1245ff;
+                        text-decoration-line: underline;
+                      "
+                      >subscribe</a
+                    >
+                  </div>
+                </td>
+              </tr>
+            </table>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+    <!-- DESKTOP VERSION  -->
+    <table
+      width="100%"
+      style="
+        max-width: 600px;
+        width: 100%;
         background-image: url(./images/bg-table.jpg);
         background-position: 100% 25%;
         background-repeat: no-repeat;
         background-size: contain;
+        display: none;
       "
       cellpadding="0"
       cellspacing="0"
@@ -137,6 +591,7 @@
                     alt="monitor of imac"
                     width="210"
                     height="210"
+                    style="display: block; max-width: 100%; height: auto"
                   />
                 </td>
               </tr>
@@ -223,6 +678,7 @@
                     alt="tablet"
                     width="210"
                     height="210"
+                    style="display: block; max-width: 100%; height: auto"
                   />
                 </td>
               </tr>
@@ -306,6 +762,7 @@
                     alt="treasure"
                     width="210"
                     height="210"
+                    style="display: block; max-width: 100%; height: auto"
                   />
                 </td>
               </tr>
@@ -459,5 +916,6 @@
         </tr>
       </tbody>
     </table>
+    
   </body>
 </html>
